# rutas-transporte-argentina

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  acerca-de.txt  main.cpp
include/: Sistema.h
public/: index.html
public/static/: buscarRuta.js  cargarRutas.js  detalleRuta.js  mapa.css  mapa.js
src/: Sistema.cpp
utilidades/: ayuda.txt  generarcsv.py  trips.csv
x64/Release/ALL_BUILD/: ALL_BUILD.recipe
x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
